--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header {
     color: white;
     padding: 20px;
     text-align: center;
+    max-width: 100%;
 }
 
 header {
@@ -18,7 +19,7 @@ header {
     justify-content: start;
     display: flex;
     margin: 1000px;
-    max-width: 960px;
+
     margin: 0 auto;
 }
 
@@ -26,7 +27,7 @@ header {
     align-items: center;
     justify-content: space-between;
     display: grid;
-    padding-left:100px ;
+    padding-left:30% ;
 }
 .chet td{
     background-color: aqua;
@@ -79,7 +80,7 @@ button{
 footer{
     background-color: #ddebfa;
     align-items: center;
-    max-width: 960px;
+    max-width: 100%;
     margin: 0 auto;
 }
 footer p {
